# lavs

./: 6.0.0  LICENSE  pyproject.toml
.github/workflows/: python-test.yml
.promptosaurus/sessions/: session_20260309_a1b2c3.md  session_20260310_security_api_key.md
app/: main.py
app/configurations/: configuration.py
app/connections/: connection.py  connection_factory.py  duckdb_connection.py
app/database/: database_manager.py
app/models/requests/: application_and_version_model.py  application_name_model.py
app/models/respones/: applciation_and_version_response_model.py  response_model.py
app/models/responses/: application_and_version_response_model.py  patch_response_model.py
app/queries/: query.py
app/queries/crud/: retrieve_all.py
app/queries/patch_version/: create_patch.py  read_current_patch.py  rollback_to_previous_patch_version.py
app/queries/versions/: create_version.py  delete_version.py  retrieve_latest_version.py  retrieve_version_history.py
app/routers/: basic_crud.py  patch.py  versions.py
app/security/: __init__.py  api_key.py
docs/: REPOSITORY_EXPLANATION.md
helm/lavs/: Chart.yaml  values.yaml
helm/lavs/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
helm/lavs/templates/tests/: test-connection.yaml
tests/connections/: test_duckdb_connection.py
tests/database/: test_database_manager.py
tests/integration/: conftest.py
tests/integration/routers/: test_basic_crud.py  test_patch.py  test_versions.py
tests/queries/patch/: test_create_patch.py
tests/queries/versions/: test_create_version.py  test_delete_version.py  test_read_latest_version.py  test_retrieve_version_history.py
tests/unit/security/: test_api_key.py
