[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lavs"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "duckdb>=1.5.0",
    "fastapi>=0.135.1",
    "pydantic>=2.12.5",
    "uvicorn>=0.40.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.8.0",
    "pre-commit>=4.0.0",
    "pyright>=1.1.389",
    "build>=1.0.0",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "security: marks tests as security tests",
    "unit: marks tests as unit tests",
]

[tool.pyright]
pythonVersion = "3.13"
include = ["app"]
exclude = ["tests", "**/__pycache__", ".venv"]
ignore = [".venv"]
strict = []
typeCheckingMode = "standard"
reportMissingImports = "warning"
reportMissingTypeStubs = "warning"
venvPath = "."
venv = ".venv"
